only API integration w/ login left for me. Stop-gap solution implemented so others can work as if they're logged in.

--- a/client/style.css
+++ b/client/style.css
@@ -55,7 +55,6 @@
 #login-container{
     width: 100%;
     height: 100%;
-    background-color: red;
 }
 
 #toolbar{
